# cocoon

./: CLAUDE.md  Cargo.toml  Dockerfile  cocoon.tsp  docker-bake.hcl  plugin.toml
core/: Cargo.toml  build.rs
core/src/: adi_frame.rs  adi_router.rs  core.rs  e2e_tests.rs  filesystem.rs  interactive.rs  lib.rs  main.rs  runtime.rs  self_update.rs  setup.rs  silk.rs  webrtc.rs
core/src/services/: credentials.rs  knowledgebase.rs  mod.rs  plugin.rs  tasks.rs  tools.rs
images/: Dockerfile.alpine  Dockerfile.custom  Dockerfile.debian  Dockerfile.full  Dockerfile.gpu  Dockerfile.node  Dockerfile.python  Dockerfile.ubuntu
plugin/: Cargo.toml  build.rs
plugin/src/: lib.rs
scripts/: build-images.sh  install.sh
src/: core.rs  core.rs.bak2  core.rs.bak3  core.rs.new.backup2  core.rs.new.backup3  core.rs.tmp  interactive.rs  lib.rs  main.rs  runtime.rs  self_update.rs  setup.rs  silk.rs  webrtc.rs
src/services/: mod.rs  tasks.rs  tools.rs
web/: CONTEXT.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: adi-frame.ts  cocoon-client.ts  cocoon-connection.ts  cocoon-webrtc.ts  component.ts  config.ts  debug-section.ts  index.ts  plugin.ts  silk-command.ts  silk-session.ts  silk-types.ts  types.ts
web/src/bus/: events.ts  index.ts  types.ts
