[package]
name = "cocoon"
version = "0.2.7"
edition = "2021"
description = "Cocoon: containerized environment with signaling server connectivity for remote command execution"
license = "LicenseRef-Proprietary"
authors = ["ADI Team"]

[[bin]]
name = "cocoon"
path = "src/main.rs"
required-features = ["standalone"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["services"]
standalone = []
services = ["tasks-core"]

[dependencies]
# Plugin SDK - one import for everything
lib-plugin-prelude = { path = "../lib/lib-plugin-prelude" }

# Interactive CLI
inquire = "0.7"

# Environment
lib-env-parse = { path = "../lib/lib-env-parse" }

# Daemon management
lib-daemon-core = { path = "../lib/lib-daemon-core" }

# Core dependencies
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "process", "io-util", "sync", "signal"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

# ADI services (optional, for embedded service support)
tasks-core = { path = "../tasks/core", optional = true }
base64 = "0.22"
walkdir = "2"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
lib-signaling-protocol = { path = "../lib/lib-signaling-protocol" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portable-pty = "0.8"
rand = "0.9"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"] }
semver = "1"

# WebRTC support
webrtc = "0.11"

# Filesystem support
chrono = "0.4"
glob = "0.3"

# HTTP server for setup/pairing flow
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
hostname = "0.4"

[dev-dependencies]
tempfile = "3"

[package.metadata.plugin]
id = "adi.cocoon"
name = "Cocoon"
type = "core"

[package.metadata.plugin.compatibility]
min_host_version = "0.8.0"

[package.metadata.plugin.cli]
command = "cocoon"
description = "Containerized worker for remote command execution"
aliases = []

[[package.metadata.plugin.provides]]
id = "adi.cocoon.cli"
version = "1.0.0"
description = "CLI commands for cocoon management"

[package.metadata.plugin.tags]
categories = ["remote", "execution", "terminal", "pty"]
