[package]
name = "cocoon"
version = "0.2.7"
edition = "2021"
description = "Cocoon: containerized environment with signaling server connectivity for remote command execution"
license = "LicenseRef-Proprietary"
authors = ["ADI Team"]

[[bin]]
name = "cocoon"
path = "src/main.rs"
required-features = ["standalone"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["services"]
standalone = []
services = ["tasks-core"]
kb-service = ["kb-core"]

[dependencies]
# Plugin SDK
lib-plugin-prelude = { path = "../_lib/lib-plugin-prelude" }
lib-plugin-abi-v3 = { path = "../_lib/lib-plugin-abi-v3" }

# Environment
lib-env-parse = { path = "../_lib/lib-env-parse" }

# Console output
lib-console-output = { path = "../_lib/lib-console-output" }

# Daemon client for adi daemon communication
lib-daemon-client = { path = "../_lib/lib-daemon-client" }

# Core dependencies
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "process", "io-util", "sync", "signal"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
once_cell = "1"
anyhow = "1"

# ADI services (optional, for embedded service support)
tasks-core = { path = "../tasks/core", optional = true }
kb-core = { package = "knowledgebase-core", path = "../knowledgebase/core", features = ["fastembed"], optional = true }
base64 = "0.22"
walkdir = "2"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
lib-signaling-protocol = { path = "../signaling/protocol" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portable-pty = "0.8"
rand = "0.9"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"] }
semver = "1"

# WebRTC support
webrtc = "0.11"

# Filesystem support
chrono = "0.4"
glob = "0.3"

# HTTP server for setup/pairing flow
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
hostname = "0.4"

[dev-dependencies]
tempfile = "3"

[package.metadata.plugin]
id = "adi.cocoon"
name = "Cocoon"
type = "core"

[package.metadata.plugin.compatibility]
api_version = 3
min_host_version = "0.8.0"

[package.metadata.plugin.cli]
command = "cocoon"
description = "Containerized worker for remote command execution"
aliases = []

[[package.metadata.plugin.provides]]
id = "adi.cocoon.cli"
version = "1.0.0"
description = "CLI commands for cocoon management"

[package.metadata.plugin.daemon]
auto_start = false
restart_on_failure = true
max_restarts = 3

[package.metadata.plugin.tags]
categories = ["remote", "execution", "terminal", "pty"]
