[package]
name = "cocoon-core"
version = "0.2.7"
edition = "2021"
description = "Core library for Cocoon - containerized worker business logic"
license = "LicenseRef-Proprietary"
authors = ["ADI Team"]

[[bin]]
name = "cocoon"
path = "src/main.rs"
required-features = ["standalone"]

[features]
default = ["services"]
standalone = []
services = ["tasks-core"]
kb-service = ["kb-core"]
credentials-service = ["credentials-core", "sqlx"]

[dependencies]
# Environment
lib-env-parse = { path = "../../../crates/_lib/lib-env-parse" }

# Console output
lib-console-output = { path = "../../../crates/_lib/lib-console-output" }

# Daemon client
lib-daemon-client = { path = "../../../crates/_lib/lib-daemon-client" }

# Signaling protocol
lib-signaling-protocol = { path = "../../../crates/signaling/protocol" }

# Core dependencies
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "process", "io-util", "sync", "signal", "time"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
once_cell = "1"
anyhow = "1"

# ADI services (optional)
tasks-core = { path = "../../../crates/tasks/core", optional = true }
kb-core = { package = "knowledgebase-core", path = "../../../crates/knowledgebase/core", features = ["fastembed"], optional = true }
credentials-core = { path = "../../adi.credentials/core", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"], optional = true }

bytes = "1"
base64 = "0.22"
walkdir = "2"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portable-pty = "0.8"
rand = "0.9"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"] }
semver = "1"

# WebRTC support
webrtc = "0.11"

# Filesystem support
chrono = "0.4"
glob = "0.3"

# HTTP server for setup/pairing flow
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
hostname = "0.4"

[build-dependencies]
typespec-api = { package = "lib-typespec-api", path = "../../../crates/tsp-gen/core" }

[dev-dependencies]
tempfile = "3"
